apps/common/freeradius/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freeradius
  namespace: freeradius
  labels:
    app: freeradius
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freeradius
  template:
    metadata:
      labels:
        app: freeradius
    spec:
      serviceAccountName: freeradius
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: freeradius
        image: mthorley/freeradius:f9dc9cc37ec2950c9324420bfa04ae330a3a958e
        imagePullPolicy: Always
        ports:
        - containerPort: 1812
          name: freeradius-auth
        - containerPort: 1813
          name: freeradius-acc
        volumeMounts:
        - name: radius-conf
          mountPath: /etc/freeradius/radiusd.conf
          subPath: radiusd.conf
      volumes:
        - name: radius-conf
          configMap:
            name: radius-config
